--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity android:name=".ViewRequests" />
         <activity android:name=".BrowseBooks" />
         <activity android:name=".BrowseOrders" />
-        <activity android:name=".ViewSignups"></activity>
+        <activity android:name=".ViewSignups" />
+        <activity android:name=".generateBill"></activity>
     </application>
 
 </manifest>
